# rust_hands_on

./: .gitignore  Cargo.toml  README.md
concurrency/async_runtime_tokio/async_tokio/: Cargo.toml
concurrency/async_runtime_tokio/async_tokio/src/: main.rs
data_structures/: README.md
file_system/adapt_gitignore_rust/: .gitignore  Cargo.toml
file_system/file_operations/: .gitignore  Cargo.toml  new_file.txt
file_system/filesystem_operations/: Cargo.toml
macros/declarative_macros/: README.adoc
macros/rust_book_example/: README.adoc
networking/: README.adoc
networking/basic_tcp/: Cargo.toml
networking/gRPC/: basic_protobuf_serialization
networking/gRPC/example-grpc-tonic/: Cargo.toml  build.rs
networking/gRPC/example-grpc-tonic/proto/: helloworld.proto
rust_basics/: Cargo.toml  README..md  README.adoc
rust_basics/src/: arrays.rs  closures.rs  drop_trait.rs  enum_option_ex1.rs  enum_option_ex2.rs  enums.rs  error_handling.rs  functions.rs  hashmaps.rs  iterators.rs  main.rs  match_patterns.rs  options.rs  ownership.rs  point_ref.rs  pointers_reference.rs  print.rs  raw_pointers.rs  references.rs  simple_boxed_list.rs  slices.rs  smart_pointers.rs  smart_pointers_arc.rs  smart_pointers_box.rs  (+9 more)
serialization_deserialization/: README.adoc
src/: 01_print.rs  02_vars.rs  03_types.rs  04_strings.rs  05_arrays.rs  06_vectors.rs  07_tuples.rs  08_conditionals.rs  09_loops.rs  10_functions.rs  11_point_ref.rs  12_structs.rs  13_enums.rs  14_cli.rs  cli.rs  conditionals.rs  functions.rs  loops.rs  main.rs  ownership.rs  tuples.rs  vars.rs  vectors.rs
(+77 files in other folders)
