[package]
name = "example-grpc-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.11"


# server binary
[[bin]]
    name = "hello-server"
    path = "src/server.rs"


# client binary
[[bin]]
    name = "hello-client"
    path = "src/client.rs

